--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,54 +1,179 @@
-name: Deploy Project from Repo
 
+name: Deploy Docker Image
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main  # triggers on commits to main
+      - main
+env:
+  MYSQL_SERVER_IP: ${{ secrets.MYSQL_SERVER_IP }}
+  MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+  MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+  EMAIL_SERVICE_SERVER_IP: ${{ secrets.EMAIL_SERVICE_SERVER_IP }}
+  JWT_SECRET: ${{ secrets.JWT_SECRET }}
+
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: SSH and deploy on server
-        uses: appleboy/ssh-action@v1.2.0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Gradle and Build
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-version: '8.5'
+          arguments: clean bootJar -x test
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: taneem101/project:latest
+          platforms: linux/amd64,linux/arm64
+          build-args: |
+            JAR_FILE=myapp.jar
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Copy files to server
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 22
+          source: "docker-compose.yml"
+          target: "~/deploy/"
+          timeout: 30s
+
+      - name: Install Docker and Docker Compose on server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 22
+          timeout: 300s
           script: |
-            mkdir -p ~/project
-            cd ~/project
-
-            # Copy project files from GitHub runner to server (excluding .git)
-            rsync -av --exclude='.git' $GITHUB_WORKSPACE/ ./
-
-            # Export secrets for docker-compose
-            export MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
-            export MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}
-            export MYSQL_SERVER_IP=${{ secrets.MYSQL_SERVER_IP }}
-            export EMAIL_SERVICE_SERVER_IP=${{ secrets.EMAIL_SERVICE_SERVER_IP }}
-            export JWT_SECRET=${{ secrets.JWT_SECRET }}
-
-            # Ensure Docker is installed
+            # Install Docker if not already installed
             if ! command -v docker &> /dev/null; then
+              echo "Installing Docker using convenience script..."
               curl -fsSL https://get.docker.com -o get-docker.sh
-              sh get-docker.sh
+              sudo sh get-docker.sh
+              sudo systemctl start docker
+              sudo systemctl enable docker
               sudo usermod -aG docker $USER
+              rm get-docker.sh
+              echo "Docker installed successfully"
+            else
+              echo "Docker is already installed"
             fi
 
-            # Ensure Docker Compose is installed
-            if ! docker compose version &> /dev/null; then
-              sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" \
-                -o /usr/local/bin/docker-compose
-              sudo chmod +x /usr/local/bin/docker-compose
-            fi
+            # Verify Docker Compose is available (comes with Docker)
+            docker compose version
 
-            # Build Docker image from Dockerfile
-            docker build -t main_app:latest ./demo3
+      - name: SSH and deploy with docker-compose
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 22
+          timeout: 300s
+          envs: MYSQL_SERVER_IP,MYSQL_DATABASE,MYSQL_ROOT_PASSWORD,EMAIL_SERVICE_SERVER_IP,JWT_SECRET
+          script: |
+            cd ~/deploy
+            
+            # Set environment variables
+            export MYSQL_SERVER_IP="${MYSQL_SERVER_IP}"
+            export MYSQL_DATABASE="${MYSQL_DATABASE}"
+            export MYSQL_ROOT_PASSWORD="${MYSQL_ROOT_PASSWORD}"
+            export EMAIL_SERVICE_SERVER_IP="${EMAIL_SERVICE_SERVER_IP}"
+            export JWT_SECRET="${JWT_SECRET}"
+            
+            # Pull the latest image
+            docker pull taneem101/project:latest
+            # Stop and remove existing containers
+            docker-compose down || true
+            # Start the application
+            docker-compose up -d
+            # Clean up unused images
+            docker image prune -f
 
-            # Deploy with Docker Compose
-            docker compose up -d --remove-orphans
+      - name: Health Check - Verify Deployment
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 22
+          timeout: 180s
+          script: |
+            cd ~/deploy
+
+            echo "Checking if containers are running..."
+            docker-compose ps
+
+            echo "Waiting for application to start..."
+            sleep 10
+
+            # Try health check with retries
+            max_attempts=3
+            attempt=1
+
+            while [ $attempt -le $max_attempts ]; do
+              echo "Health check attempt $attempt/$max_attempts..."
+
+              # Check if container is still running
+              if ! docker-compose ps | grep -q "Up"; then
+                echo "❌ Container is not running!"
+                docker-compose logs --tail=20
+                exit 1
+              fi
+
+              # Try to connect to the application
+              response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/ping 2>/dev/null || echo "000")
+
+              if [ "$response" = "200" ]; then
+                echo "✅ Deployment successful! Application is responding with HTTP 200"
+                echo "Health check passed at $(date)"
+                exit 0
+              elif [ "$response" = "000" ]; then
+                echo "Connection failed (attempt $attempt/$max_attempts) - application may still be starting..."
+              else
+                echo "Got HTTP $response (attempt $attempt/$max_attempts)"
+              fi
+
+              if [ $attempt -lt $max_attempts ]; then
+                echo "Waiting 4 seconds before retry..."
+                sleep 4
+              fi
+
+              attempt=$((attempt + 1))
+            done
+
+            echo "❌ Deployment failed! Health check failed after $max_attempts attempts"
+            echo "Final container status:"
+            docker-compose ps
+            echo "Recent application logs:"
+            docker-compose logs --tail=50
+            exit 1
+            
